spacing on image divs fixed

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -891,7 +891,7 @@ h1.arrow2 { font-size: 55px;
 .earnCredits {
   font-size: 20px;
   color: red;
-  margin-top: 45px;
+  margin-top: 125px;
 }
 
 /*sign up*/
